optimize commonconverter:类型不需要从customized注解里获取，直接通过反射获取所有需要转换的类型信息，注解只是用来标识自定义类属性。